--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
        
         <nav class="header_nav2">
             <ul>
-                <!--<li><a href="C:/Users/jseidema/Desktop/web_page_files/Home.html"><div class="home-image"><i class="fa fa-home"></i></div></a></li>  -->            
-                <li><a class="active" href="C:/Users/jseidema/Desktop/web_page_files/index.html">Home</a></li>
-                <li><a href="C:/Users/jseidema/Desktop/web_page_files/Job-seekers.html">Job seekers</a></li>
-                <li><a href="C:/Users/jseidema/Desktop/web_page_files/Employers.html">Employers</a></li>
-                <li><a href="C:/Users/jseidema/Desktop/web_page_files/Contact-us.html">Contact us</a></li>                
+                <!--<li><a href="index.html"><div class="home-image"><i class="fa fa-home"></i></div></a></li>  -->            
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="Job-seekers.html">Job seekers</a></li>
+                <li><a href="Employers.html">Employers</a></li>
+                <li><a href="Contact-us.html">Contact us</a></li>                
             </ul>
         </nav>
 
