--- a/Contact-us.html
+++ b/Contact-us.html
@@ -98,7 +98,7 @@
         <nav class="header_nav2">
             <ul>
                  <!--<li><a href="index.html"><div class="home-image"><i class="fa fa-home"></i></div></a></li>  -->            
-                 <li><a href="index.html">Home</a></li>
+                 <li><a href="seidemanja.github.io/index.html">Home</a></li>
                  <li><a href="Job-seekers.html">Job seekers</a></li>
                 <li><a href="Employers.html">Employers</a></li>
                 <li><a class="active" href="Contact-us.html">Contact us</a></li>                
