--- a/Contact-us.html
+++ b/Contact-us.html
@@ -99,9 +99,9 @@
             <ul>
                  <!--<li><a href="index.html"><div class="home-image"><i class="fa fa-home"></i></div></a></li>  -->            
                  <li><a href="seidemanja.github.io/index.html">Home</a></li>
-                 <li><a href="Job-seekers.html">Job seekers</a></li>
-                <li><a href="Employers.html">Employers</a></li>
-                <li><a class="active" href="Contact-us.html">Contact us</a></li>                
+                 <li><a href="seidemanja.github.io/Job-seekers.html">Job seekers</a></li>
+                <li><a href="seidemanja.github.io/Employers.html">Employers</a></li>
+                <li><a class="active" href="seidemanja.github.io/Contact-us.html">Contact us</a></li>                
             </ul>
         </nav>
 
