--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="Job-seekers.html">Job seekers</a></li>
                 <li><a href="Employers.html">Employers</a></li>
-                <li><a href="Articles.html">Contact us</a></li>                
+                <li><a href="Articles.html">Articles</a></li>                
                 <li><a href="Contact-us.html">Contact us</a></li>      
             </ul>
         </nav>
