--- a/Contact-us.html
+++ b/Contact-us.html
@@ -101,6 +101,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Job-seekers.html">Job seekers</a></li>
                 <li><a href="Employers.html">Employers</a></li>
+                <li><a href="Articles.html">Articles</a></li>
                 <li><a class="active" href="Contact-us.html">Contact us</a></li>                
             </ul>
         </nav>
