--- a/Articles.html
+++ b/Articles.html
@@ -114,7 +114,7 @@
 
         <div class="ContactUsContent">
             <p>
-                <li><a href="Articles/Article_num.html">Article Title</a></li>
+                <li><a href="Articles/06-11-2023.html">Article Title</a></li>
             </p>
         </div>
 
