--- a/Articles.html
+++ b/Articles.html
@@ -55,17 +55,17 @@
             z-index: 9999;
             }
         
-            .ContactUsContent {
+            .ArticlesContent {
             position: relative;
             height: 30px;
             padding: none;
             top:15%;
             color: #000000;
             text-decoration: none;
-            font-size: 30px;
+            font-size: 20px;
             font-family: 'EB Garamond';
-            font-weight: 550;
-            text-align: center;
+            font-weight: 350;
+            text-align: left;
             left: 50%;
             transform: translate(-50%, -100%);
             z-index: 9999;
@@ -112,7 +112,7 @@
             </p>
         </div>
 
-        <div class="ContactUsContent">
+        <div class="ArticlesContent">
             <p>
                 <li><a href="Articles/06-11-2023.html">Article Title</a></li>
             </p>
