--- a/Articles.html
+++ b/Articles.html
@@ -66,9 +66,9 @@
             font-family: 'EB Garamond';
             font-weight: 350;
             text-align: left;
-            left: 50%;
-            transform: translate(-50%, -100%);
-            z-index: 9999;
+            left: 0%;
+            margin: 5%
+            width: 90%
             }
 
 
