--- a/Articles.html
+++ b/Articles.html
@@ -67,9 +67,9 @@
             font-weight: 350;
             text-align: left;
             left: 0%;
-            margin: 5%
-            width: 90%
-            list-style-type: none
+            margin: 5%;
+            width: 90%;
+            list-style-type: none;
             }
 
 
