--- a/Articles.html
+++ b/Articles.html
@@ -60,7 +60,7 @@
             height: 30px;
             padding: none;
             top:15%;
-            color: #000000;
+            color: #0000EE;
             text-decoration: none;
             font-size: 20px;
             font-family: 'EB Garamond';
