--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
         <div class="imgbox">
-            <img class="center-fit" src="pexels-marc-mueller-380768_new_2.jpg">
+            <img class="center-fit" src="noise_500x12x8.png">
         </div>
 
 
