--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
         <div class="imgbox">
-            <img class="center-fit" src="noise_500x12x8.png">
+            <img class="center-fit" src="art-3033207_1920.jpg">
         </div>
 
 
