--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
     <body>
 
 
-        <div class="imgbox">
-            <img class="center-fit" src="art-3033207_1920.jpg">
-        </div>
+        --<div class="imgbox">
+        --    <img class="center-fit" src="art-3033207_1920.jpg">
+        --</div>
 
 
         <div class="imgboxICON">
