--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             .imgbox {
             display: grid;
             height: 100%;
-            filter: contrast(75%);
+            filter: contrast(65%);
             z-index: 9998;
             }
 
@@ -126,15 +126,10 @@
     <body>
 
 
-        <!--<div class="imgbox">-->
-        <!--    <img class="center-fit" src="art-3033207_1920.jpg">-->
-        <!--</div>-->
-
-
-        <div class="imgboxICON">
-            <img class="eyeCon" src="eyeball_svg3.svg">
+        <div class="imgbox">
+            <img class="center-fit" src="art-3033207_1920.jpg">
         </div>
-       
+     
         <nav class="header_nav2">
             <ul>
                 <!--<li><a href="index.html"><div class="home-image"><i class="fa fa-home"></i></div></a></li>  -->            
