--- a/index.html
+++ b/index.html
@@ -51,9 +51,22 @@
             left: 50%;
             transform: translate(-50%, -100%);
             z-index: 9999;
-
             }
         
+            .right {
+            position: fixed;
+            height: 30px;
+            padding: none;
+            top:0;
+            color: #6b3400;
+            text-decoration: none;
+            font-size: 30px;
+            font-family: 'EB Garamond';
+            font-weight: 550;
+            text-align: right;
+            left: 90%;
+            }
+            
             .header_nav2 a:hover:not(.active) {
             border-bottom:3px solid rgb(100, 100, 100);
             }
@@ -140,7 +153,7 @@
 
         <div class="center">
             <p>
-                Company name
+                Company Name
             </p>
         </div>
 
