--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </ul>
         </nav>
 
-        <div class="center">
+        <div class="right">
             <p>
                 Company Name
             </p>
