--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             .right {
             position: fixed;
             height:100%;
+            top: 0;
             left: 90%
             padding: none;
             color: #6b3400;
