--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         
             .right {
             position: fixed;
-            height:100%;
+            height: 30px;
             top: 0;
-            left: 90%
             padding: none;
             color: #6b3400;
             text-decoration: none;
             font-size: 30px;
             font-family: 'EB Garamond';
             font-weight: 550;
-            text-align: right;
+            text-align: left;
+            left: 90%
             z-index: 9999;
             }
             
