--- a/index.html
+++ b/index.html
@@ -55,15 +55,16 @@
             .right {
             position: fixed;
             height: 30px;
-            top: 0;
             padding: none;
+            top:0;
             color: #6b3400;
             text-decoration: none;
             font-size: 30px;
             font-family: 'EB Garamond';
             font-weight: 550;
-            text-align: left;
-            left: 90%
+            text-align: right;
+            left: 50%;
+            transform: translate(-50%, -100%);
             z-index: 9999;
             }
             
