--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
             height: 30px;
             padding: none;
             top:0;
+            right:0
             color: #6b3400;
             text-decoration: none;
             font-size: 30px;
             font-family: 'EB Garamond';
             font-weight: 550;
             text-align: right;
-            transform: translate(-100%, -100%);
-            z-index: 9999;
             }
             
             .header_nav2 a:hover:not(.active) {
