--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             height: 30px;
             padding: none;
             top:0;
-            right:0
+            right:0;
             color: #6b3400;
             text-decoration: none;
             font-size: 30px;
