--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             font-family: 'EB Garamond';
             font-weight: 550;
             text-align: right;
+            z-index: 9999;
             }
             
             .header_nav2 a:hover:not(.active) {
