--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         
             .right {
             position: fixed;
-            height: 30px;
+            height: 100%;
             padding: none;
             top:0;
             right:0;
