--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         
             .right {
             position: fixed;
-            height: 100%;
-            padding: none;
-            top:0;
+            padding: 0px 16px;
             right:0;
             color: #6b3400;
             text-decoration: none;
@@ -64,6 +62,7 @@
             font-family: 'EB Garamond';
             font-weight: 550;
             text-align: right;
+            height: 100%;
             z-index: 9999;
             }
             
