--- a/index.html
+++ b/index.html
@@ -53,17 +53,14 @@
             }
         
             .right {
-            position: fixed;
-            padding: 0px 16px;
-            right:0;
+            float: right;
             color: #6b3400;
+            padding: 14px 16px;
             text-decoration: none;
             font-size: 30px;
             font-family: 'EB Garamond';
-            font-weight: 550;
-            text-align: right;
-            height: 100%;
             z-index: 9999;
+            height:100%;
             }
             
             .header_nav2 a:hover:not(.active) {
