--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             }
         
             .right {
-            float: right;
+            text-align: right;
             color: #6b3400;
             padding: 14px 16px;
             text-decoration: none;
