--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             }
                     
             .right {
+            position: absolute;
+            top:5px;
+            right:5px;
             text-align: right;
             color: #6b3400;
             padding: 14px 16px;
@@ -44,7 +47,6 @@
             font-size: 30px;
             font-family: 'EB Garamond';
             z-index: 9999;
-            height:100%;
             }
             
             .header_nav2 a:hover:not(.active) {
