--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     
             .right {
             position: absolute;
-            top:5px;
-            right:5px;
+            top:0;
+            right:0;
             text-align: right;
             color: #6b3400;
             padding: 14px 16px;
