--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             position: absolute;
             top:0;
             right:0;
+            height:100%;
             text-align: right;
             color: #6b3400;
             padding: 14px 16px;
