--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
             }
                     
             .right {
-            position: absolute;
+            position: fixed;
             top:0;
             right:0;
             height:100%;
             text-align: right;
             color: #6b3400;
-            padding: 14px 16px;
             text-decoration: none;
             font-size: 30px;
             font-family: 'EB Garamond';
