--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             .header_nav2 b {
             float: right;
             color: #6b3400;
+            padding: 0px 16px;
             text-decoration: none;
             font-size: 30px;
             font-family: 'EB Garamond';
