--- a/Articles.html
+++ b/Articles.html
@@ -105,7 +105,8 @@
 
         <div class="ArticlesContent">
             <p>
-                <li><a href="Articles/06-11-2023.html">Article Title</a></li>
+                <li><a href="Articles/06-11-2023.html">Article Title 1 - June 11th, 2023</a></li>
+                <li><a href="Articles/06-11-2023.html">Article Title 2 - June 11th, 2023</a></li>
             </p>
         </div>
 
