--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             
              /* Style the links inside the navigation bar */
             .header_nav2 b {
-            float: right;
+            float: center;
             color: #6b3400;
             padding: 0px 16px;
             text-decoration: none;
             font-size: 30px;
-            font-family: 'EB Garamond';
+            font-family: 'Pacifico';
             z-index: 9999;
             height:100%;
             border-bottom:3px transparent;
@@ -129,7 +129,7 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="Articles.html">Articles</a></li>                
                 <li><a href="Contact-us.html">Contact us</a></li>  
-                <li><b href="index.html.html">Company Name</b></li>      
+                <li><b href="index.html.html">Jot-ai</b></li>      
             </ul>
         </nav>
 
