--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
             
              /* Style the links inside the navigation bar */
             .header_nav2 b {
-            float: center;
+            text-align:center;
             color: #6b3400;
-            padding: 0px 16px;
             text-decoration: none;
             font-size: 30px;
-            font-family: 'Pacifico';
+            font-family: 'Pacifico', cursive;
             z-index: 9999;
             height:100%;
             border-bottom:3px transparent;
