--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Tab Name</title>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
 
         <style>
            
@@ -128,7 +129,7 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="Articles.html">Articles</a></li>                
                 <li><a href="Contact-us.html">Contact us</a></li>  
-                <li><b href="index.html.html">Jot-ai</b></li>      
+                <li><b href="index.html.html">Genny</b></li>      
             </ul>
         </nav>
 
