--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Tab Name</title>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
 
         <style>
            
