--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="Articles.html">Articles</a></li>                
                 <li><a href="Contact-us.html">Contact us</a></li>  
-                <li><b href="index.html.html">Genny</b></li>      
+                <li><b href="index.html.html">genny</b></li>      
             </ul>
         </nav>
 
