--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
              /* Style the links inside the navigation bar */
             .header_nav2 b {
             text-align:center;
+            margin-left:auto;
+            margin-right: auto;
             color: #6b3400;
             text-decoration: none;
             font-size: 30px;
