--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
              /* Style the links inside the navigation bar */
             .header_nav2 b {
             text-align:center;
-            margin-left:auto;
-            margin-right: auto;
+            left: 50%;
             color: #6b3400;
             text-decoration: none;
             font-size: 30px;
