--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
             
              /* Style the links inside the navigation bar */
             .header_nav2 b {
-            text-align:center;
             color: #6b3400;
             text-decoration: none;
             font-size: 30px;
             font-family: 'Pacifico', cursive;
             z-index: 9999;
             height:100%;
-            margin:auto;
             border-bottom:3px transparent;
+            text-align: center;
+            left: 50%;
+            transform: translate(-50%, -100%);
             }
             
             .header_nav2 a:hover:not(.active) {
