--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta charset="utf-8">
         <title>Tab Name</title>
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -128,7 +129,6 @@
                 <!--<li><a href="index.html"><div class="home-image"><i class="fa fa-home"></i></div></a></li>  -->            
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="Articles.html">Articles</a></li>                
-                <li><a href="Contact-us.html">Contact us</a></li>  
             </ul>
         </nav>
 
