--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
             .imgbox {
             display: grid;
             height: 100%;
+            top:0%;
             z-index: 9998;
             }
 
             .center-fit {
             max-width: 96%;
             max-height: 96%;
-            margin-left: auto;
-            margin-right: auto;
-            top:2%;
+            margin: auto;
+            top:0%;
             }
 
 
