--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             .center-fit {
             max-width: 96%;
             max-height: 96%;
-            margin: auto;
+            margin-left: auto;
+            margin-right: auto;
             top:0%;
             }
 
