--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             .imgbox {
             display: grid;
             height: 100%;
-            top:-10%;
+            top:0%;
+            margin-top:50px
             z-index: 9998;
             }
 
