--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
             max-height: 96%;
             margin-left: auto;
             margin-right: auto;
-            margin-top:50px
-            top:0%;
+            top:50px;
             }
             
 
