--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             max-height: 96%;
             margin-left: auto;
             margin-right: auto;
-            top:50px;
+            top:0%;
+            padding-top:50px;
             }
             
 
