--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                height:100%;
                margin:0;
                background-color:rgb(255, 255, 255);
+               scrollbar-gutter: stable;
            }
                        
             .header_nav2 {
