--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             overflow: hidden;
             position: fixed; /* Set the navbar to fixed position */
             top: 0; /* Position the navbar at the top of the page */  
-            width: 100%;     
+            width: 100vw;     
             box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);   
             z-index: 9998; 
             }
