--- a/Articles.html
+++ b/Articles.html
@@ -60,7 +60,7 @@
             position: relative;
             height: 30px;
             padding: none;
-            top:60px;
+            top:70px;
             color: #0000EE;
             text-decoration: none;
             font-size: 20px;
@@ -68,7 +68,7 @@
             font-weight: 350;
             text-align: left;
             left: 0%;
-            margin: 5%;
+            margin: none;
             width: 90%;
             list-style-type: none;
             }
