--- a/Articles.html
+++ b/Articles.html
@@ -68,7 +68,7 @@
             font-weight: 350;
             text-align: left;
             left: 0%;
-            margin: none;
+            margin-left: 20px;
             width: 90%;
             list-style-type: none;
             }
