--- a/Articles.html
+++ b/Articles.html
@@ -108,7 +108,7 @@
 <p>
 <li><a href="Articles/06-11-2023.html">Article Title 1 - June 11th, 2023</a></li>
 <li><a href="Articles/06-12-2023.html">Article Title 2 - June 12th, 2023</a></li>
-<li><a href="Articles/99-99-9999.html">Article Title 99 - June 99th, 9999</a></li></p>
+<li><a href="Articles/99-99-9999.html">Article Title 99 - June 99th, 9999</a></li><li><a href="Articles/Title text replacement_2023-06-16.html">Article Title 99 - June 99th, 9999</a></li></p>
 </div>
 </body>
 </html>
